tests/NormalTests/paczka1/fuzzy1/82659306.err
Error in line 3: Ttvq9wdw A472 13,21
Error in line 4: opcquSx A472 78,7
Error in line 5: opcquSx A279 14,4
Error in line 2: Ttvq9wdw A445 95,6
Error in line 16: opcquSx A
Error in line 17: 31 179,1
Error in line 15: NgiXW A231 55,7
Error in line 25: Rx20jf A279 90,05
Error in line 29: NgiXW A279 87,8
Error in line 31: NgiXW A231 35,9
Error in line 32: NgiXW A23    4,2
Error in line 30: A445 A472 2,7
Error in line 8: opcquSx A231 55,8
Error in line 35: Ttvq9wdw A231 73,1
Error in line 36: opcquSx A279 73,0
Error in line 37: Ttvq9wdw A472 46,4
